# nawa

./: README.md  pyproject.toml
backend/server/cart/: urls.py
backend/server/core/: urls.py  views.py
backend/server/core/templates/: basetemp.html  footer.html  header.html  index.html
backend/server/order/: urls.py
backend/server/order/templates/: basetemp.html
backend/server/server/: settings.py  urls.py
backend/server/shop/: admin.py  models.py
backend/server/shop/migrations/: 0001_initial.py
backend/server/shop/templates/: products.html
backend/server/static/css/: main.css
backend/server/static/css/plugins/: animate.css  fonts.css  jquery-ui.css  magnific-popup.css  perfect-scrollbar.css  select2.min.css  slick.css
backend/server/static/css/vendors/: bootstrap.min.css  bootstrap.min.css.map  fontawesome-all.min.css  normalize.css  uicons-regular-straight.css
backend/server/static/js/: main.js  shop.js
backend/server/static/js/plugins/: TweenMax.min.js  jquery-ui.js  jquery.countdown.min.js  jquery.elevatezoom.js  jquery.theia.sticky.js  leaflet.js  perfect-scrollbar.js
backend/server/static/sass/: main.scss
backend/server/user/: admin.py  forms.py  managers.py  models.py
backend/server/user/migrations/: 0001_initial.py
