[project]
name = "nawa"
version = "0.1.0"
description = "a online shop"
authors = [
    {name = "Sattar Amini",email = "sattaramini987654@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "django-colorfield (>=0.12.0,<0.13.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "django-ckeditor (>=6.7.2,<7.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "django-jalali (>=7.4.0,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
